--- a/package.json
+++ b/package.json
@@ -80,8 +80,8 @@
   },
   "eslintConfig": {
     "env": {
-      "browser": true,
-      "node": true
+      "browser": false,
+      "node": false
     }
   }
 }
