--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "memory-fs": "^0.4.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-kakao-login": "^1.1.0",
     "react-redux": "^5.0.7",
     "react-router": "^3.2.1",
     "react-router-dom": "^4.3.1",
