--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "google-maps-react": "^2.0.2",
     "jquery": "^3.3.1",
     "memory-fs": "^0.4.1",
+    "qrcode-react": "^0.1.16",
     "react": "^16.3.2",
     "react-cookies": "^0.1.0",
     "react-dom": "^16.3.2",
